--- a/ProyectoSistemaBiblioteca/nbproject/project.properties
+++ b/ProyectoSistemaBiblioteca/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoSistemaBiblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.edisoncorSX.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\edisoncorSX.jar
+file.reference.jcMousePanel-1.6.9.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\jcMousePanel-1.6.9.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.edisoncorSX.jar}:\
+    ${file.reference.jcMousePanel-1.6.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectosistemabiblioteca.ProyectoSistemaBiblioteca
+main.class=clases.ProyectoSistemaBiblioteca
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
