--- a/ProyectoSistemaBiblioteca/nbproject/project.properties
+++ b/ProyectoSistemaBiblioteca/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.edisoncorSX.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\edisoncorSX.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\Jcalendar\\jcalendar-1.3.3.jar
+file.reference.JCalendar.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\JCalendar.jar
 file.reference.jcMousePanel-1.6.9.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\jcMousePanel-1.6.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.edisoncorSX.jar}:\
-    ${file.reference.jcMousePanel-1.6.9.jar}
+    ${file.reference.jcMousePanel-1.6.9.jar}:\
+    ${file.reference.JCalendar.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
