--- a/ProyectoSistemaBiblioteca/nbproject/project.properties
+++ b/ProyectoSistemaBiblioteca/nbproject/project.properties
@@ -29,17 +29,23 @@ dist.jar=${dist.dir}/ProyectoSistemaBiblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\DateChooser.jar
 file.reference.edisoncorSX.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\edisoncorSX.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\Jcalendar\\jcalendar-1.3.3.jar
 file.reference.JCalendar.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\JCalendar.jar
 file.reference.jcMousePanel-1.6.9.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\jcMousePanel-1.6.9.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\sqlite-jdbc-3.8.11.2.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.edisoncorSX.jar}:\
     ${file.reference.jcMousePanel-1.6.9.jar}:\
     ${file.reference.JCalendar.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +69,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=clases.ProyectoSistemaBiblioteca
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=Interfaz_Grafica.GestionUsuarios
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
