--- a/ProyectoSistemaBiblioteca/nbproject/project.properties
+++ b/ProyectoSistemaBiblioteca/nbproject/project.properties
@@ -31,8 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\DateChooser.jar
 file.reference.edisoncorSX.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\edisoncorSX.jar
-file.reference.jcalendar-1.3.3.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\Jcalendar\\jcalendar-1.3.3.jar
-file.reference.JCalendar.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\JCalendar.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\albert\\Documents\\NetBeansProjects\\Jcalendar\\jcalendar-1.3.3.jar
 file.reference.jcMousePanel-1.6.9.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\jcMousePanel-1.6.9.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\sqlite-jdbc-3.8.11.2.jar
 includes=**
@@ -42,10 +41,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.edisoncorSX.jar}:\
     ${file.reference.jcMousePanel-1.6.9.jar}:\
-    ${file.reference.JCalendar.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
