Agregue la funcion de busqueda en la tabla de usuarios

--- a/ProyectoSistemaBiblioteca/nbproject/project.properties
+++ b/ProyectoSistemaBiblioteca/nbproject/project.properties
@@ -32,6 +32,8 @@ excludes=
 file.reference.DateChooser.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\DateChooser.jar
 file.reference.edisoncorSX.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\edisoncorSX.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\albert\\Documents\\NetBeansProjects\\Jcalendar\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=C:\\Users\\albe211\\Documents\\NetBeansProjects\\Jcalendar\\jcalendar-1.3.3.jar
+file.reference.JCalendar.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\JCalendar.jar
 file.reference.jcMousePanel-1.6.9.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\jcMousePanel-1.6.9.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\albe211\\Documents\\NetBeansProjects\\la carpeta\\sqlite-jdbc-3.8.11.2.jar
 includes=**
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.jcMousePanel-1.6.9.jar}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.JCalendar.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
